--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gsap": "^3.13.0",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
+    "next-pwa": "^5.6.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
